[package]
name = "batch-game"
version = "0.1.0"
edition = "2021"
links = "X11"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
portaudio = "0.7.0"
x11 = { version = "2.21.0", features = ["all"] }
libc = "0.2"

[build-dependencies]
pkg-config = "0.3.24"
